Arreglos a la fecha

--- a/creditos-web/WebContent/Creditos_web.html
+++ b/creditos-web/WebContent/Creditos_web.html
@@ -13,6 +13,10 @@
     <!--                                                               -->
     <link type="text/css" rel="stylesheet" href="Creditos_web.css">
 
+	<script type="text/javascript" src="library/jspdf.min.js"></script>
+	<script type="text/javascript" src="library/jspdf.plugin.autotable.js"></script>	
+	<script type="text/javascript" src="library/test_harness.js"></script>
+
     <!--                                           -->
     <!-- Any title is fine                         -->
     <!--                                           -->
